add more features with button PLAY and fix case insensitive

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
+    <style>
+      body {
+        text-align: center;
+        padding: 20rem 0 0;
+      }
+    </style>
   </head>
   <body>
+    <button id="playButton" onclick="play()">PLAY</button>
     <script src="./script.js"></script>
   </body>
 </html>
