--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <style>
       body {
         text-align: center;
-        padding: 20rem 0 0;
+        padding: 5rem 0 0;
       }
     </style>
   </head>
   <body>
+    <h1>The Rock-Paper-Scissors Game</h1>
     <button id="playButton" onclick="play()">PLAY</button>
     <script src="./script.js"></script>
   </body>
