--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   </head>
   <body>
     <h1>The Rock-Paper-Scissors Game</h1>
+    <p>Press PLAY button</p>
+    <p>Type in your choice</p>
+    <p>paper or rock or scissors</p>
+    <p>Then it will show the result.</p>
     <button id="playButton" onclick="play()">PLAY</button>
     <script src="./script.js"></script>
   </body>
