--- a/index.html
+++ b/index.html
@@ -8,17 +8,53 @@
     <style>
       body {
         text-align: center;
-        padding: 5rem 0 0;
+        padding: 2.5rem 0 0;
+        background-color: #ccc;
+      }
+      button {
+        margin: 0 auto 3rem;
+        padding: 8px 16px;
+      }
+      .container {
+        width: 100%;
+        max-width: 450px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        background-color: lightblue;
+      }
+      .wrap {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+      ul,
+      li {
+        list-style-type: none;
       }
     </style>
   </head>
   <body>
     <h1>The Rock-Paper-Scissors Game</h1>
     <p>Press PLAY button</p>
-    <p>Type in your choice</p>
-    <p>paper or rock or scissors</p>
+    <p>Type in the pop-up window your choice</p>
+    <p>
+      <strong>paper</strong> or <strong>rock</strong> or
+      <strong>scissors</strong>
+    </p>
     <p>Then it will show the result.</p>
     <button id="playButton" onclick="play()">PLAY</button>
+    <div id="showResult" class="container">
+      <ul id="playerCount" class="player wrap">
+        <h2><strong>Player</strong></h2>
+        <strong><li id="player">0</li></strong>
+      </ul>
+      <ul id="computerCount" class="computer wrap">
+        <h2><strong>Computer</strong></h2>
+        <strong><li id="computer">0</li></strong>
+      </ul>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
