add defer keyword to the script.js file

--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
         <strong><li id="computer">0</li></strong>
       </ul>
     </div>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
   </body>
 </html>
