--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
-    <script src="./script.js" defer></script>
+
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,10 +13,40 @@
       href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="assets/icons/favicon.ico" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12" defer></script>
+    <script src="./script.js" defer></script>
   </head>
   <body class="gradient-background">
-    <div id="wrapper" class="padding8-16">
-      <h1>Hello World</h1>
+    <div id="wrapper" class="container-fluid">
+      <div class="layer1">
+        <span class="auto-type"></span>
+        <button type="button" class="btn btn-primary yesBtn">YES</button>
+        <div class="layer2">
+          <span class="auto-type-2">FIRST TO 5, WIN THE GAME...</span>
+          <div class="imgCtn">
+            <img
+              src="./assets/img/1200px-Rock-paper-scissors.svg.png"
+              alt="Rock Paper Scissors game"
+              class="img-fluid img"
+            />
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
