initialize multi files to link to

--- a/assets/pages/notplay.html
+++ b/assets/pages/notplay.html
@@ -38,36 +38,26 @@
   </head>
   <body class="gradient-background">
     <div id="wrapper" class="container-fluid">
-      <section id="section1" class="section1 animate__animated">
+      <section id="section3" class="section3 animate__animated">
         <h1 class="p1 animate__animated animate__rotateInDownLeft">
-          HUMAN VS AI
+          OH NOOOO ...
         </h1>
-        <p class="p2 animate__animated animate__rotateInDownLeft">
-          TO FIND OUT THE LAST MAN (OR AI ?) STANDING !!!
-        </p>
+
         <div class="row">
           <p class="animate__animated animate__rotateInDownLeft p3">
-            WILL YOU FIGHT,
+            IF YOU DON'T FIGHT FOR HUMAN,
           </p>
           <p class="animate__animated animate__rotateInDownLeft p3-1">
-            FOR HUMAN ???
+            WHO WOULD ?
           </p>
         </div>
 
-        <a href="./assets/pages/play.html"
+        <a href="index.html"
           ><button
             type="button"
             class="animate__animated animate__lightSpeedInLeft p4 btn btn-lg btn-success yesBtn"
           >
-            YES
-          </button></a
-        >
-        <a href="./assets/pages/notplay.html"
-          ><button
-            type="button"
-            class="btn btn-danger noBtn animate__animated btn-lg animate__lightSpeedInRight p5"
-          >
-            MAYBE NOT
+            CHOOSE AGAIN !
           </button></a
         >
       </section>
