--- a/assets/pages/play.html
+++ b/assets/pages/play.html
@@ -37,40 +37,48 @@
     <script src="./script.js" defer></script>
   </head>
   <body class="gradient-background">
-    <div id="wrapper" class="container-fluid">
-      <section id="section1" class="section1 animate__animated">
-        <h1 class="p1 animate__animated animate__rotateInDownLeft">
-          HUMAN VS AI
+    <div id="wrapper" class="column playPage container-fluid">
+      <section id="section2" class="section2 animate__animated">
+        <h1 class="p6 animate__animated animate__rotateInDownLeft">
+          FIRST TO 5 WIN THE GAME!
         </h1>
-        <p class="p2 animate__animated animate__rotateInDownLeft">
-          TO FIND OUT THE LAST MAN (OR AI ?) STANDING !!!
-        </p>
         <div class="row">
-          <p class="animate__animated animate__rotateInDownLeft p3">
-            WILL YOU FIGHT,
-          </p>
+          <p class="animate__animated animate__rotateInDownLeft p3">ROUND 1</p>
           <p class="animate__animated animate__rotateInDownLeft p3-1">
-            FOR HUMAN ???
+            CHOOSE YOUR WEAPON:
           </p>
         </div>
-
-        <a href="./assets/pages/play.html"
-          ><button
-            type="button"
-            class="animate__animated animate__lightSpeedInLeft p4 btn btn-lg btn-success yesBtn"
-          >
-            YES
-          </button></a
+        <button
+          type="button"
+          class="btn btn-success p7 animate__animated animate__lightSpeedInLeft btn-lg rockBtn"
         >
-        <a href="./assets/pages/notplay.html"
-          ><button
-            type="button"
-            class="btn btn-danger noBtn animate__animated btn-lg animate__lightSpeedInRight p5"
-          >
-            MAYBE NOT
-          </button></a
+          Rock
+        </button>
+        <button
+          type="button"
+          class="btn btn-danger p8 animate__animated animate__lightSpeedInLeft btn-lg rockBtn"
         >
+          Paper
+        </button>
+        <button
+          type="button"
+          class="btn btn-warning p9 animate__animated animate__lightSpeedInLeft btn-lg rockBtn"
+        >
+          Scissors
+        </button>
       </section>
+      <footer class="footer">
+        <a href="index.html">
+          <button type="button" class="btn btn-secondary btn-lg backBtn">
+            BACK TO INTRO PAGE
+          </button>
+        </a>
+        <a href="notplay.html">
+          <button type="button" class="btn btn-secondary btn-lg surrBtn">
+            SURRENDER BECAUSE AI IS TOO STRONG :)))
+          </button>
+        </a>
+      </footer>
     </div>
   </body>
 </html>
