--- a/assets/pages/play.html
+++ b/assets/pages/play.html
@@ -4,42 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock Paper Scissors</title>
-
-    <link rel="stylesheet" href="style.css" />
+    <title>Play page</title>
+    <link rel="stylesheet" href="../../style.css" />
+    <!-- file css general -->
+    <link rel="stylesheet" href="../css/play.css" />
+    <!-- file css specific -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/icons/favicon.ico" />
-    <!-- CSS only -->
+    <!-- links google fonts -->
+    <link rel="icon" href="../icons/favicon.ico" />
+    <!-- GIF image -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <!-- JavaScript Bundle with Popper -->
+    <!-- link bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
       defer
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12" defer></script>
+    <!-- link bootstrap -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-
-    <script src="./script.js" defer></script>
+    <!-- link animate.css -->
   </head>
   <body class="gradient-background">
     <div id="wrapper" class="column playPage container-fluid">
-      <section id="section2" class="section2 animate__animated">
-        <h1 class="p6 animate__animated animate__rotateInDownLeft">
+      <section id="section-play" class="section-play animate__animated">
+        <h1 class="p1 animate__animated animate__rotateInDownLeft">
           FIRST TO 5 WIN THE GAME!
         </h1>
         <div class="row">
@@ -50,19 +52,19 @@
         </div>
         <button
           type="button"
-          class="btn btn-success p7 animate__animated animate__lightSpeedInLeft btn-lg rockBtn"
+          class="btn btn-success p4 animate__animated animate__lightSpeedInLeft btn-lg rockBtn"
         >
           Rock
         </button>
         <button
           type="button"
-          class="btn btn-danger p8 animate__animated animate__lightSpeedInLeft btn-lg rockBtn"
+          class="btn btn-danger p5 animate__animated animate__lightSpeedInLeft btn-lg rockBtn"
         >
           Paper
         </button>
         <button
           type="button"
-          class="btn btn-warning p9 animate__animated animate__lightSpeedInLeft btn-lg rockBtn"
+          class="btn btn-warning p5 animate__animated animate__lightSpeedInLeft btn-lg rockBtn"
         >
           Scissors
         </button>
