--- a/index.html
+++ b/index.html
@@ -4,72 +4,73 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock Paper Scissors</title>
-
+    <title>Home page</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- file css general -->
+    <link rel="stylesheet" href="./assets/css/index.css" />
+    <!-- file css specific -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap"
       rel="stylesheet"
     />
+    <!-- links google fonts -->
     <link rel="icon" href="assets/icons/favicon.ico" />
-    <!-- CSS only -->
+    <!-- GIF image -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <!-- JavaScript Bundle with Popper -->
+    <!-- link bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
       defer
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12" defer></script>
+    <!-- link bootstrap -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-
-    <script src="./script.js" defer></script>
+    <!-- link animate.css -->
   </head>
   <body class="gradient-background">
-    <div id="wrapper" class="container-fluid">
-      <section id="section1" class="section1 animate__animated">
+    <div id="wrapper" class="container-fluid flex-column">
+      <section id="section-index" class="section-index animate__animated">
         <h1 class="p1 animate__animated animate__rotateInDownLeft">
           HUMAN VS AI
         </h1>
         <p class="p2 animate__animated animate__rotateInDownLeft">
           TO FIND OUT THE LAST MAN (OR AI ?) STANDING !!!
         </p>
-        <div class="row">
-          <p class="animate__animated animate__rotateInDownLeft p3">
-            WILL YOU FIGHT,
-          </p>
-          <p class="animate__animated animate__rotateInDownLeft p3-1">
-            FOR HUMAN ???
-          </p>
+        <p class="animate__animated animate__rotateInDownLeft p3">
+          WILL YOU FIGHT,
+        </p>
+        <p class="animate__animated animate__rotateInDownLeft p3-1">
+          FOR HUMAN ???
+        </p>
+        <div class="btn-ctn">
+          <a href="./assets/pages/play.html">
+            <button
+              type="button"
+              class="animate__animated animate__lightSpeedInLeft p4 btn btn-lg btn-success yesBtn"
+            >
+              YES &#9989;
+            </button>
+          </a>
+          <a href="./assets/pages/notplay.html">
+            <button
+              type="button"
+              class="btn btn-danger noBtn animate__animated btn-lg animate__lightSpeedInRight p5"
+            >
+              MAYBE NOT &#10060;
+            </button>
+          </a>
         </div>
-
-        <a href="./assets/pages/play.html"
-          ><button
-            type="button"
-            class="animate__animated animate__lightSpeedInLeft p4 btn btn-lg btn-success yesBtn"
-          >
-            YES
-          </button></a
-        >
-        <a href="./assets/pages/notplay.html"
-          ><button
-            type="button"
-            class="btn btn-danger noBtn animate__animated btn-lg animate__lightSpeedInRight p5"
-          >
-            MAYBE NOT
-          </button></a
-        >
       </section>
     </div>
   </body>
