--- a/assets/pages/play.html
+++ b/assets/pages/play.html
@@ -40,7 +40,7 @@
   </head>
   <body class="gradient-background">
     <div id="wrapper" class="flex-column playPage container-fluid">
-      <section id="section-play" class="section-play animate__animated">
+      <section id="section-play" class="section-play">
         <h1 class="p1 animate__animated animate__rotateInDownLeft">
           FIRST TO 5 WIN THE GAME!
         </h1>
@@ -100,7 +100,7 @@
             BACK TO HOME PAGE
           </button>
         </a>
-        <a href="notplay.html">
+        <a href="lose.html">
           <button type="button" class="btn btn-secondary btn-lg surrBtn">
             SURRENDER BECAUSE <strong>AI</strong> IS TOO STRONG :)))
           </button>
