--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
   <body class="gradient-background">
     <div id="wrapper" class="container-fluid flex-column">
-      <section id="section-index" class="section-index animate__animated">
+      <section id="section-index" class="section-index">
         <h1 class="p1 animate__animated animate__rotateInDownLeft">
           HUMAN VS AI
         </h1>
